--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finance Tracking Application</title>
+    <title>Finance Tracking</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Finance Tracking Application</h1>
+    <h1>Finance Tracking</h1>
 
     <div class="balance-box">
         Balance: <span id="balance">0</span> €
     </div>
 
     <div class="controls">
-        <input type="number" id="amount" placeholder="Amount">
-        <input type="text" id="note" placeholder="Description (optional)">
+        <input type="number" id="amount" placeholder="Miktar">
+        <input type="text" id="note" placeholder="Açıklama (opsiyonel)">
         <button id="incomeBtn">Income</button>
         <button id="expenseBtn">Expense</button>
     </div>
