--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
 
     <div class="controls">
-        <input type="number" id="amount" placeholder="Miktar">
-        <input type="text" id="note" placeholder="Açıklama (opsiyonel)">
+        <input type="number" id="amount" placeholder="Amount">
+        <input type="text" id="note" placeholder="Description (optional)">
         <button id="incomeBtn">Income</button>
         <button id="expenseBtn">Expense</button>
     </div>
@@ -27,3 +27,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
