--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
     <ul id="history"></ul>
 
     <h2>Chart</h2>
-    <canvas id="chartCanvas"></canvas>
+
+    <div class="chart-row">
+        <div class="chart-box">
+            <h3>Income – Expense Line Chart</h3>
+            <canvas id="chartCanvas"></canvas>
+        </div>
+
+        <div class="chart-box">
+            <h3>Total Distribution</h3>
+            <canvas id="pieCanvas"></canvas>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="app.js"></script>
