--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     </div>
 
     <h2>Transaction History</h2>
+
+    <input type="text" id="search" placeholder="Search (date, description, amount)...">
+
     <ul id="history"></ul>
 
     <h2>Chart</h2>
