--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <button id="themeToggle" class="theme-btn">🌙</button>
+
     <h1>Finance Tracking</h1>
 
     <div class="balance-box">
@@ -21,9 +23,9 @@
         <button id="expenseBtn">Expense</button>
     </div>
 
-    <h2>Transaction History</h2>
+    <h2>İşlem Geçmişi</h2>
 
-    <input type="text" id="search" placeholder="Search (date, description, amount)...">
+    <input type="text" id="search" placeholder="Arama yap (tarih, açıklama, miktar)...">
 
     <ul id="history"></ul>
 
