--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <button id="expenseBtn">Expense</button>
     </div>
 
-    <h2>İşlem Geçmişi</h2>
+    <h2>Transaction History</h2>
 
-    <input type="text" id="search" placeholder="Arama yap (tarih, açıklama, miktar)...">
+    <input type="text" id="search" placeholder="Search (date, description, amount)...">
 
     <ul id="history"></ul>
 
@@ -47,3 +47,4 @@
     <script src="app.js"></script>
 </body>
 </html>
+
